--- a/flashcard.css
+++ b/flashcard.css
@@ -1,7 +1,7 @@
 div {
   color: blue;
   font-family: 'Sofia';
-  font-size:22px;
+  font-size:1vw;
   background-color:powderblue;
   border:10px solid Violet;
   padding: 20px;
