--- a/flashcard.css
+++ b/flashcard.css
@@ -1,12 +1,12 @@
 div {
   color: blue;
   font-family: 'Sofia';
-  font-size:4vw;
+  font-size:22px;
   background-color:powderblue;
   border:10px solid Violet;
   padding: 20px;
   border-radius: 20px;
   border-style: outset;
-  width: 40vw;
-  height: 50vw;
+  width: 400px;
+  height: 500px;
 }
