--- a/flashcard.css
+++ b/flashcard.css
@@ -9,5 +9,5 @@ div {
   border-style: outset;
   width: 400px;
   height: 500px;
-  box-shadow: 2px 2px 5px grey;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
 }
