--- a/flashcard.css
+++ b/flashcard.css
@@ -6,7 +6,7 @@ div {
   border:10px solid Violet;
   padding: 20px;
   border-radius: 20px;
-  border-style: outset;
+/*  border-style: outset; */
   width: 400px;
   height: 500px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
