--- a/flashcard.css
+++ b/flashcard.css
@@ -7,7 +7,7 @@ div {
   padding: 20px;
   border-radius: 20px;
   border-style: outset;
-  width: 400px;
+  max-width: 400px;
   height: 500px;
   box-shadow: 10px 10px 5px grey;
 }
