--- a/smallFlashcard.css
+++ b/smallFlashcard.css
@@ -5,7 +5,7 @@ div {
   background-color:powderblue;
 /*  border:10px solid Violet; */
   padding: 20px;
-  border-radius: 20px;
+/*  border-radius: 20px; */
 /*  border-style: outset; */
   max-width: 100px;
   max-height: 100px;
