--- a/smallFlashcard.css
+++ b/smallFlashcard.css
@@ -7,7 +7,7 @@ div {
   padding: 20px;
 /*  border-radius: 20px; */
 /*  border-style: outset; */
-  width: 400px;
-  height: 300px;
+  max-width: 400px;
+  max-height: 300px;
   /*  box-shadow: 10px 10px 5px grey; */
 }
