--- a/smallFlashcard.css
+++ b/smallFlashcard.css
@@ -1,6 +1,6 @@
 div {
   color: blue;
-  font-family: 'Sofia';
+/*  font-family: 'Sofia'; */
   font-size:22px;
   background-color:powderblue;
 /*  border:10px solid Violet; */
