--- a/smallFlashcard.css
+++ b/smallFlashcard.css
@@ -1,6 +1,3 @@
-body {
-  background-color: powerblue;
-}
 div {
   color: blue;
 /*  font-family: 'Sofia'; */
@@ -10,7 +7,7 @@ div {
   padding: 20px;
 /*  border-radius: 20px; */
 /*  border-style: outset; */
-  max-width: 400px;
-  max-height: 300px;
+/*  max-width: 400px;
+/*  max-height: 300px;
   /*  box-shadow: 10px 10px 5px grey; */
 }
