--- a/css/flashCard.css
+++ b/css/flashCard.css
@@ -2,12 +2,15 @@
    fc-md: 3 cards in a row
    fc-lg: 2 cards in a row
    fc-jb: 1 card in a row*/
+body {
+    background-color: powderblue;
+}
 .fc-sm {
     width: 200px;
     height: 150px;
 }
 .fc-md {
-    width: 300px;
+    width: 350px;
     height: 250px;
 }
 .fc-lg {
@@ -28,15 +31,28 @@
     align-items: center;
     background-color: lightblue;
 }
-
 h1 {
     font-size: 50px;
 }
-
 h2 {
     font-size: 40px;
 }
-
+h1, h2 {
+  text-align:center;
+  color: blue;
+}
 p {
     color: blue;
+}
+.fc-sm:hover {
+    background-color: lightgreen;
+}
+.fc-md:hover {
+    background-color: lightgreen;
+}
+.fc-lg:hover {
+    background-color: lightgreen;
+}
+.fc-jb:hover {
+    background-color: lightgreen;
 }
