--- a/css/flashCard.css
+++ b/css/flashCard.css
@@ -32,7 +32,8 @@ body {
     background-color: lightblue;
 }
 h1 {
-    font-size: 50px;
+    margin-top: 40px;
+    font-size: 60px;
 }
 h2 {
     font-size: 40px;
