--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@
 body {
     background-color: powderblue;
 }
-
+p {
+    color: blue;
+    font-size: 24px;
+}
 h1 {
     font-size: 60px;
     text-align: center;
