add more in the intro section

--- a/css/scroll-top.css
+++ b/css/scroll-top.css
@@ -12,6 +12,7 @@
     right: 0px;
     transition: background-color 1s;
     z-index: 1000;
+    transform: scale(0.7, 0.7);
     }
 #scroll-top:hover {
     cursor: pointer;
