--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     color: blue;
   }
 
+.ps-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
 body {
     background-color: powderblue;
 }
@@ -14,6 +18,7 @@ p {
     color: blue;
     font-size: 24px;
     text-indent: 2rem;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 h1 {
     font-size: 60px;
