--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
     font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
+.ps-arial {
+        font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     background-color: powderblue;
 }
